--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html , body {
+/* html , body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -18,4 +18,4 @@ html , body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-} 
+}  */
